--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask==3.0.3
-qrcode[pil]==7.4.2
-Pillow==10.4.0
+# Required libraries to install via terminal before deployment:
+Flask
+qrcode[pil]
+Pillow
+venv [environment]
+
